# dmuhs.github.io

./: .gitignore  .gitmodules  .travis.yml  CNAME  Makefile  README.md  TODO  archives.html  code-verification-with-git.html  converting-mysql-table-data-graphml-file.html  goodbye-trip-campana-chame.html  hebe-design-decisions.html  hugo.toml  index.html  index2.html  index3.html  index4.html  index5.html  index6.html  install-intel-graphics-drivers-for-fedora-23.html  nwise-iteration-python.html  parsing-kmz-track-data-python.html  pelicanconf.py  performing-well-codefest8.html  ppp-01-come-fly-with-me.html  ppp-02-a-helping-hand.html  ppp-03-new-lands.html  ppp-04-turning-the-tides.html  ppp-05-isla-grande.html  ppp-05-taboga-the-island-of-flowers.html  ppp-06-the-city-of-knowledge.html  ppp-08-conquering-volcan-baru.html  ppp-09-a-trip-to-paradise-bocas-del-toro.html  ppp-10-gamboa-welcome-to-the-jungle.html  ppp-11-strolling-through-the-park.html  ppp-12-getting-my-greens-valle-anton.html  publishconf.py  pyproject.toml  pythonic-goto.html  requirements.txt  (+8 more)
.circleci/: config.yml
archetypes/: posts.md
category/: design.html  git.html  hackathons.html  python.html  python2.html  travel.html  travel2.html  travel3.html  troubleshooting.html
content/: about.md  code-verification-git-flake.md  hebe-design-decisions.md  install-intel-graphics-drivers-for-fedora-23.md  latex-template-generation.md  mysql-to-graphml.md  nwise-iterator.md  parsing-kmz-track-data.md  performing-well-codefest8.md  ppp-01-come-fly-with-me.md  ppp-02-a-helping-hand.md  ppp-03-new-lands.md  (+17 more)
(+216 files in other folders)
