[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Dominik Muhs <dmuhs@protonmail.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pelican = {extras = ["markdown"], version = "^4.9.1"}
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
pandoc = "^2.3"
mdformat = "^0.7.17"
mdformat-frontmatter = "^2.0.8"
pelican-liquid-tags = "^1.0.4"
pelican-image-process = "^3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
